Make sure buttons don’t wrap

--- a/app/assets/stylesheets/urls.scss
+++ b/app/assets/stylesheets/urls.scss
@@ -70,3 +70,10 @@ table.dataTable{
 		margin:20px 0;
 	}
 }
+
+.stats-actions{
+	.btn{
+		display:inline-block;
+		margin-right:5px;
+	}
+}
